Portfolio Website: Fix: Adjut the background video to be visible and added column to main content Issue: navbar not collapsing when it's on mobile viewpoint

--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,42 @@
 * {
   margin: 0;
 }
-.video-container {
-  position: relative;
-}
-#video {
-  position: absolute;
-  min-width: 100%;
-  min-height: 100%;
-  top: 0;
+
+/* video background */
+#background-video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
   left: 0;
   right: 0;
+  top: 0;
   bottom: 0;
-  width: auto;
-  height: auto;
-  z-index: -100;
+  z-index: -1;
 }
-.video-content {
-  width: 100%;
+/* Texts over the video */
+.Video_Text {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  width: 100vw;
+  height: 100vh;
+  padding: 20px;
   position: absolute;
-  top: 8px;
-  left: 16px;
-  z-index: 10;
+}
+@media (max-width: 750px) {
+  #background-video {
+    display: none;
+  }
+  body {
+    background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+    background-size: cover;
+  }
+}
+main {
+  background-color: rgb(234, 241, 243);
+  margin-top: 50vh;
+  padding: 10px;
+  position: relative;
 }
 
 /*
